k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: django-backend

  template:
    metadata:
      labels:
        app: django-backend

    spec:
      containers:
      - name: django-backend

        image: apurva051/django-backend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8000
