k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: react-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: react-frontend

  template:
    metadata:
      labels:
        app: react-frontend

    spec:
      containers:
      - name: react-frontend

        image: apurva051/react-frontend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
