k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: react-frontend

spec:
  selector:
    app: react-frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
