k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nexgen-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend
            port:
              number: 3000

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-backend
            port:
              number: 8000
